<resources>
    <string name="app_name">Some Notes</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_label">Some Notes</string>
    <string name="add_note_label">Adding Note</string>
    <string name="note_label">Note</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Note...</string>
    <string name="add_btn_text">Add</string>
    <string name="update_btn_text">Update</string>
    <string name="delete_all_dialog_title">Delete all notes?</string>
    <string name="delete_all_dialog_msg">Are you sure, you want to delete all notes?</string>
    <string name="delete_note_title">Delete this note?</string>
    <string name="delete_note_msg">Are you sure, you want to delete this note?</string>

    <string name="positive_btn_txt">Yes</string>
    <string name="negative_btn_txt">No</string>

    <string name="removed_toast_txt">Successfully removed the note.</string>
    <string name="removed_all_toast_txt">Successfully removed all notes.</string>

    <string name="updated_note_toast_txt">Successfully updated!</string>

    <string name="fill_fields_toast_txt">Please fill out all fields.</string>

</resources>