<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.somenotes.fragments.list.ListFragment"
        android:label="@string/main_label"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_listFragment_to_updateFragment2"
            app:destination="@id/updateFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.somenotes.fragments.add.AddFragment"
        android:label="@string/add_note_label"
        tools:layout="@layout/fragment_add">
        <action
            android:id="@+id/action_addFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.example.somenotes.fragments.update.UpdateFragment"
        android:label="@string/note_label"
        tools:layout="@layout/fragment_update">
        <action
            android:id="@+id/action_updateFragment2_to_listFragment"
            app:destination="@id/listFragment" />
        <argument
            android:name="currentNote"
            app:argType="com.example.somenotes.model.Note" />
    </fragment>
</navigation>