<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.update.UpdateFragment">

    <EditText
        android:id="@+id/updateTitle_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#AC4B1C"
        android:ems="10"
        android:fontFamily="@font/hind_guntur_light"
        android:hint="@string/title_hint"
        android:theme="@style/LightBrownTheme"
        android:inputType="text|textCapSentences"
        android:shadowColor="#FFFFFF"
        android:textStyle="bold"
        android:textColorHint="#989898"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateNote_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/hind_guntur_light"
        android:gravity="clip_vertical"
        android:hint="@string/content_hint"
        android:inputType="textMultiLine|text|textCapSentences"
        android:paddingLeft="5dp"
        android:textColorHint="#989898"
        android:textSize="24sp"
        android:lineSpacingMultiplier="0.8"
        android:theme="@style/LightBrownTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/update_btn"
        style="@style/LightBrownTheme"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/save_btn_bg"
        android:fontFamily="@font/hind_guntur_light"
        android:text="@string/update_btn_text"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        android:theme="@style/Theme.SomeNotes"
        app:layout_constraintBottom_toBottomOf="@+id/updateNote_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>